# Color_Similarity_GWOT

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml
data/: permutation_test_vs_shuffle.csv
results/: embeddings_pairs_list_atyp_emb=20_Z=128_Ngroups=2_Ntrials=75_Nsample=20.npy  embeddings_pairs_list_atyp_emb=20_Z=32_Ngroups=2_Ntrials=75_Nsample=20.npy  embeddings_pairs_list_atyp_emb=20_Z=64_Ngroups=2_Ntrials=75_Nsample=20.npy  embeddings_pairs_list_n-a_emb=20_Z=128_Ngroups=2_Ntrials=75_Nsample=20_independent.npy  embeddings_pairs_list_n-a_emb=20_Z=16_Ngroups=2_Ntrials=75_Nsample=20_independent copy.npy  embeddings_pairs_list_n-a_emb=20_Z=32_Ngroups=2_Ntrials=75_Nsample=20_independent.npy  embeddings_pairs_list_neutyp_emb=20_Z=128_Ngroups=2_Ntrials=75_Nsample=20.npy  embeddings_pairs_list_neutyp_emb=20_Z=16_Ngroups=2_Ntrials=75_Nsample=20.npy  embeddings_pairs_list_neutyp_emb=20_Z=32_Ngroups=2_Ntrials=75_Nsample=20.npy  embeddings_pairs_list_neutyp_emb=20_Z=64_Ngroups=2_Ntrials=75_Nsample=20.npy
results_public/: embeddings_pairs_list_atyp_emb=20_Z=16_Ngroups=2_Ntrials=75_Nsample=20.npy  embeddings_pairs_list_n-a_emb=20_Z=64_Ngroups=2_Ntrials=75_Nsample=20_independent.npy
scripts/: GW_simulation.py  GW_simulation_oizumi.py  MDS_sampled_groups.py  MDS_tutorial.ipynb  align_sampled_groups.py  chance_random.py  color_embedding_MDS.py  color_embedding_allresp.py  compare_accuracy.py  compare_correlation.py  compare_gwd.py  data_preprocessing.py  gw_optimization.py  make_animation.py  make_eps_gwd_plot.py  make_fig3.py  make_fig4.py  make_newfig3.py  (+4 more)
(+1157 files in other folders)
